# GalagaSDL2Tutorial

./: .gitmodules  CMakeLists.txt  README.md
GalagaSDL2/: main.cpp
GalagaSDL2/Constants/include/: Constants.h
GalagaSDL2/Entities/include/: GameEntity.h  Texture.h
GalagaSDL2/Entities/src/: GameEntity.cpp  Texture.cpp
GalagaSDL2/GameManager/include/: GameManager.h  Timer.h
GalagaSDL2/GameManager/src/: GameManager.cpp  Timer.cpp
GalagaSDL2/Graphics/include/: Graphics.h
GalagaSDL2/Graphics/src/: Graphics.cpp
GalagaSDL2/Helpers/include/: MathHelper.h
doc/: architecture.md  tutorial-links.md  vector2-operations.md
